# AlgebraicVerification

./: .gitignore  EXPERIMENT_STRUCTURE.md  Project.toml  README.md  binary_classification.py  demo.ipynb  ed-degree.jl  example_julia_analysis.py  model.py  nnexpansion.py  pyproject.toml  requirements.txt  verify_vnnlib.py  workflow_example.md
benchmark/: __init__.py  config.py  data.py  train.py  verify.py
benchmark/results/: training_summary.json  verification_summary0.csv  verification_summary0.json
cubic/: cubic_hc.py  main.ipynb
examples/: homotopy_continuation.py  kac_rice.py  verification.py
examples/constraints/: sinusoid_det_constraint.py  xor_det_regularizer.py  xor_quadratic.py
kacrice/: countzeros.py  main.ipynb
notebooks/: demo.ipynb  demo.py  demo1.ipynb  demo2.ipynb  demo_hc.ipynb  demo_intro.ipynb  demo_wall.ipynb
notebooks/.ipynb_checkpoints/: demo1-checkpoint.ipynb
notebooks/archive/: demo_hc.ipynb  demo_intro.ipynb  demo_kac.ipynb  demo_wallsym.ipynb
notebooks/saved_models/: polynomial_nn_model.pth
src/: binary_classification.py  model.py  nnexpansion.py  utils.py
src/archive/: edop.py  model.py  nnexpansion.py  test.py
src/config/: __init__.py  config.py
src/data/: __init__.py  sinusoid.py
src/ed/: ed-degree.jl  ed-degree.m2  ed-disc.jl  ed-disc.m2
src/hc/: EuclideanHC.jl  README.md  Utils.jl  __init__.py  hc.py
src/pnn/: __init__.py  cpnn.py  pnn.py  test.py
src/transformer/: linearattention.py
src/utils/: __init__.py  projected_sgd.py  training.py  utils.py
tests/: test_hc_subprocess.py  test_vnnlib_wrapper.py
(+94 files in other folders)
